--- a/_data/department-of-corrections.yml
+++ b/_data/department-of-corrections.yml
@@ -1,9 +1,9 @@
-- group-title: Section I - Jail Operations
+- group-title: Section I - Operations
   group-description:
   charts:
-    - title: Jail Population
-      summary: The City of Atlanta municipal jail houses persons arrested on city ordinance charges and those sentenced by judges in certain criminal trials. Jail populations are measured at least 3 times a day and the average of all daily counts shows the estimated jail population at any given time during the month (blue). The number of inmates booked (red) and released (blue) includes inmates that stay in the municipal jail for any amount of time. This includes pre-trial inmates arrested, but not yet sentenced.
-      description: Average daily jail population for fiscal year 2014 was above the fiscal year 2013 population by 25%. Much of this extra population is driven by housing inmates temporarily from federal agencies, which also helps maximize space and offset costs.
+    - title: Detention Center Population
+      summary: The City of Atlanta Detention Center houses persons arrested on city ordinance charges and those sentenced by judges in certain criminal trials. Detention Center populations are measured at least 3 times a day and the average of all daily counts shows the estimated Detention Center population at any given time during the month (blue). The number of inmates booked (red) and released (blue) includes inmates that stay in the municipal Detention Center for any amount of time. This includes pre-trial inmates arrested, but not yet sentenced.
+      description: Average daily Detention Center population for fiscal year 2014 was above the fiscal year 2013 population by 25%. Much of this extra population is driven by housing inmates temporarily from federal agencies, which also helps maximize space and offset costs.
       note:  Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DOC
@@ -18,8 +18,8 @@
   group-description:
   charts:
     - title: Inmate Accidents, Assaults and Escape Attempts
-      summary: A series of metrics are used to examine the safety and security of the Atlanta municipal jail. Inmate accidents (red), inmate-to-inmate assaults (gold), inmate-to-staff assaults (orange), and escape attempts (blue) are all shown as total number of incidents for the denoted month.
-      description: The City of Atlanta municipal jail has not recorded a successful escape attempt since the start of the Reed administration.
+      summary: A series of metrics are used to examine the safety and security of the Atlanta City Detention Center. Inmate accidents (red), inmate-to-inmate assaults (gold), inmate-to-staff assaults (orange), and escape attempts (blue) are all shown as total number of incidents for the denoted month.
+      description: The City of Atlanta municipal Detention Center has not recorded a successful escape attempt since the start of the Reed administration.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DOC
@@ -34,7 +34,7 @@
   group-description:
   charts:
     - title: Community Partnerships and Inmate Detail Hours
-      summary: The Atlanta municipal jail organizes inmate details with a number of community organizations to help clear roads and neighborhoods of debris and most recently helping to clean overgrown lots on vacant and abandoned properties. The number of inmate hours used each month (red) represents a count of 1 hour for each inmate detail hour complete. The number of community organizations partnered with each month to achieve detail hours is shown in blue.
+      summary: The Atlanta City Detention Center organizes inmate details with a number of community organizations to help clear roads and neighborhoods of debris and, most recently, helping to clean overgrown lots on vacant and abandoned properties. The number of inmate hours used each month (red) represents a count of 1 hour for each inmate detail hour completed. More recently, the Department of Corrections began tracking the number of community organizationsworking in partnership with the City to complete detail hours. The number of partnerships each month is indicated in blue.
       description: During the beginning of 2014, harsh weather kept inmate details to a minimum. With the change in seasons, a clear trend in increasing community partnerships and inmate hours has occurred, taking inmate hours to near record his in April 2014 (1516 hours).
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
