--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -2,7 +2,7 @@
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS's target timeframes.
   charts:
   - title: All Customer Service Requests (All Solid Waste)
-    summary: The Office of Solid Waste Services is responsible for the collection and disposal of solid waste within the City of Atlanta. Additionally, the office provides vacant lot clean-up; maintenance of various rights-of-way specified in the Atlanta City Code and dead animal removal and disposal. The office also oversees landfill operations; the City’s recycling program; enforcing codes related to lawn maintenance and the disposal of yard trimmings; and assists in citywide emergency operations.
+    summary: The Office of Solid Waste Services is responsible for the collection and disposal of solid waste within the City of Atlanta. Additionally, the office provides vacant lot clean-up, maintenance of various rights-of-way specified in the Atlanta City Code, enforcement of the City's lawn maintenance and yard trimming disposal policies and dead animal removal and disposal. The office oversees landfill operations and the City’s recycling program, and assists in citywide emergency operations.
     description: With an average of more than 2,000 service requests per month, Solid Waste Services has greatly improved how quickly the Office responds to citizen requests and is now above target.
     note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
     size: full
@@ -36,8 +36,8 @@
     series2-label: Resolved Within Target Timeframe
 
   - title: Illegal Dumping Service Requests
-    summary: The City of Atlanta collects illegal dumping from the city right of way and from the City's known dump sites. If the dump site is causing a visibility issue in the public right of way, they city will remove obstruction within 2 - 15 days.
-    description: The Office gets an average of 50 calls per month and has been trending upwards, exceeding its target just shortly after the start of 2014.
+    summary: The City of Atlanta collects illegal dumping from the city right-of-way and from the City's known dump sites. If the dump site is causing a visibility issue in the public right-of-way, the City will remove the obstruction within 2 - 15 days, depending on the level of hazard presented.
+    description: The Office receives an average of 50 calls per month and performance has been trending upwards, exceeding its target just shortly after the start of 2014.
     note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
     size: half
     department: DPW
@@ -54,7 +54,7 @@
 
   - title: Missed Collections Service Requests
     summary: The City makes an estimated 360,000 garbage, recycle, and yard trimmings per month. In the event that a collection is reported as missed, Solid Waste Services will double back that same day to collect the missed bin.
-    description: With an average of 1,000 requests per month, performance has trended upwards and has been above target most of 2014.
+    description: With an average of 1,000 missed collection requests per month (less than 0.5% of total bins collected per month), performance has trended upwards and has been above its 90% target for most of 2014.
     note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
     size: full
     department: DPW
@@ -74,7 +74,7 @@
   charts:
   - title: Garbage, recycling and yard waste collected on schedule
     summary: Household garbage, recycling and yard trimmings are collected weekly on the scheduled collection day.
-    description: Most collection schedules handle all three at the same time, but when there are equipment or staff constraints, garbage and recycle become the top priority—and garbage has not dropped below 99% collection rate since 2012.
+    description: Most collection schedules handle all garbage, recycling and yard waste pick ups at the same time, but when there are equipment or staff constraints, garbage and recycle become the top priority—and garbage has not dropped below 99% collection rate since 2012.
     note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
     size: full
     department: DPW
@@ -88,9 +88,9 @@
 - group-title: Section III - Office of Transportation Customer Service
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
   charts:
-    - title: All Customer Service Requests (All Solid Waste)
+    - title: All Customer Service Requests (All Transportation)
       summary: The Office of Transportation is responsible for overseeing and maintaining the City's street network. This office includes traffic engineering, street operations, traffic signals, street lights, street signs, street maintenance, on-street parking management, and capital/infrastructure improvement projects.
-      description: With an average of 1,700 requests per month, the office’s performance has fluctuated year over year but is trending upwards since the start of 2014 and working with FOR Atlanta work towards meeting targets.
+      description: With an average of 1,700 requests per month, the Office’s performance has fluctuated year over year. The Office is committed to meeting a target of 90% by the end of 2014.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPW
@@ -136,7 +136,7 @@
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
-    - title: Street Sign Repair and Replace Service Requests
+    - title: Street Sign Repair and Replacement Service Requests
       summary: If a street sign is reported as in need of repair or replacement (e.g. broken, blotted out, removed), a transportation inspector will investigate and order a repair or replacement as needed.
       description: With 400 requests per month, performance has trended up through the beginning of 2014 and is stabilized at target.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
@@ -154,7 +154,7 @@
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
     - title: Street Markings Service Requests
-      summary: If markings on the street are worn or missing (including lane dividers, crosswalks, bike lanes) the office of transportation will draw new markings as appropriate.
+      summary: If markings on the street are worn or missing (including lane dividers, crosswalks, bike lanes) the Office of Transportation will draw new markings as appropriate.
       description: With an average of 50 requests per month, performance has been down around the start of 2014 and trending back towards target.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
@@ -187,7 +187,7 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Street Light Repair Service Requests
-      summary: The City will repair and replace necessary aspects of street lights (including flickering lights, bulb out or missing) so long as the light is on a metal pole.
+      summary: The City will repair and replace necessary aspects of street lights (including flickering lights, bulb out or missing) so long as the light is on a metal pole, which indicates the pole is managed by the City of Atlanta.
       description: With an average of 100 requests per month, this task is often above target but fluctuates greatly following bad weather.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
