--- a/_data/atlanta-fire-rescue.yml
+++ b/_data/atlanta-fire-rescue.yml
@@ -1,31 +1,27 @@
 - group-title: Section I - Fire Responsiveness
   group-description:
   charts:
-    - title: Total Fire Events and Response Effectiveness
+    - title: Total Fire Calls For Service
       summary: Total number of fire events responded to by the Fire Rescue Department (left axis) and the percent of fire responses that met the Standards of Response Coverage (SORC) criteria, which are a combination of time to respond to an incident and number of resources responding to an incident (right axis). 
       description: To be added
       note: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: AFR
-      datasource: fire_performance
+      datasource: fire_calls_for_service
       series-grouping: false
-      series1-metric: Volume
-      series1-type: column
+      series1-metric: Result
+      series1-type: line
       series1-format: number
-      series1-label: Total Fire Events
-      series2-metric: Result
-      series2-type: line
-      series2-format: percentage
-      series2-label: Responses Meeting SORC Criteria
+      series1-label: Total Fire Calls For Service
 
-    - title: Average Turnout Time Performance
+    - title: Fire Response Performance
       summary: Average time between dispatch and unit leaving the fire station once dispatched to a fire incident
       description: To be added
       note: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: AFR
-      datasource: fire_turnout
-      series-grouping: false
+      datasource: fire_response
+      series-grouping: true
       series1-metric: Result
       series1-type: line
       series1-format: number
