--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -71,7 +71,7 @@
 - group-title: Section II - Park Maintenance
   group-description:
   charts:
-    - title: Scheduled Maintenance Completed on Schedule [Coming Soon]
+    - title: Scheduled Maintenance Completed on Schedule
       summary: Park Maintenance is handled by Park District Operations and is divided by quadrants. Parks are maintained on a ten day maintenance schedule. Parks maintenance includes mowing, blowing, trimming of shrubbery, and trash removal. <B> The chart below shows the percentage of scheduled park mowing, mulching, pruning, trash pickup that is completed on schedule.</B>
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
