--- a/_data/office-of-buildings.yml
+++ b/_data/office-of-buildings.yml
@@ -41,14 +41,9 @@
       department: DPCD
       datasource: oob_plan_review
       series-grouping: false
-      series1-metric: Volume
-      series1-type: column
-      series1-format: Number
-      series1-label: Plans Submitted for QCR
-      series2-metric: Result
-      series2-type: line
-      series2-format: percentage
-      series2-label: Plans Approved After First QCR
+      series1-metric: Result
+      series1-type: line
+      series1-format: percentage
 
 - group-title: Section II - Building Permits
   group-description:
@@ -79,6 +74,6 @@
       datasource: building_permits_detail
       series-grouping: true
       series1-metric: Result
-      series1-type: line
+      series1-type: area
       series1-format: percentage
       series1-label: Percent of Total
